text-alignment for score and win, fixed last broken image 'cutie closeup', wasn't 1:1

--- a/styles.css
+++ b/styles.css
@@ -33,10 +33,12 @@ h3 {
     flex-wrap: wrap;
     flex-direction: column;
     align-content: center;
+    text-align:center;
     color: rgb(14, 226, 180)
 }
 .result{display: flex;
     flex-wrap: wrap;
     flex-direction: column;
     align-content: center;
+    text-align: center;
     color: rgb(14, 226, 180)}
